--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="./model.js"></script>
 </head>
 <body>
     <h1>Hello, Netlify!</h1>
+    <script src="./controller.js"></script>
 </body>
 </html>
